--- a/css/login.css
+++ b/css/login.css
@@ -63,7 +63,7 @@ body {
 #loginbox {
 	background-color: LightGoldenRodYellow; 
 	width: 400px; 
-	padding: 10px 0px 15px 10px; 
+	padding: 10px 0 15px 10px;
 	margin-top: 150px;
 	margin-left:auto;
 	margin-right:auto;
